version/0.10/_sources/API/_autosummary/ansys.aedt.core.modules.solve_setup.SetupCircuit.rst.txt
SetupCircuit
============

.. currentmodule:: ansys.aedt.core.modules.solve_setup

.. autoclass:: SetupCircuit

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      SetupCircuit.add_sweep_count
      
      
      SetupCircuit.add_sweep_points
      
      
      SetupCircuit.add_sweep_step
      
      
      SetupCircuit.analyze
      
      
      SetupCircuit.create
      
      
      SetupCircuit.create_report
      
      
      SetupCircuit.disable
      
      
      SetupCircuit.enable
      
      
      SetupCircuit.enable_expression_cache
      
      
      SetupCircuit.get_profile
      
      
      SetupCircuit.get_solution_data
      
      
      SetupCircuit.update
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      SetupCircuit.available_properties
      SetupCircuit.default_intrinsics
      SetupCircuit.is_solved
      SetupCircuit.name
      SetupCircuit.omodule
      SetupCircuit.p_app
   
   